<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="30dp"
        android:elevation="5dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:padding="0dp"
                app:srcCompat="@android:drawable/ic_menu_myplaces"
                android:layout_marginRight="8dp"
                card_view:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" />
            <TextView
                android:id="@+id/txtLong_Ac"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/long_ac"
                android:layout_marginLeft="22dp"
                card_view:layout_constraintLeft_toLeftOf="@+id/imageButton"
                card_view:layout_constraintBottom_toBottomOf="@+id/imageButton"
                android:layout_marginBottom="136dp"
                android:layout_marginStart="8dp"
                card_view:layout_constraintTop_toTopOf="@+id/imageButton"
                android:layout_marginTop="8dp"
                card_view:layout_constraintVertical_bias="0.526" />

            <TextView
                android:id="@+id/txtDes_Ac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/des_ac"
                card_view:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                card_view:layout_constraintTop_toBottomOf="@+id/txtStatus"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/status_ac"
                android:layout_marginLeft="16dp"
                card_view:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="46dp"
                card_view:layout_constraintTop_toBottomOf="@+id/imageButton"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/txtLat_Ac"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lat_ac"
                android:layout_marginStart="64dp"
                card_view:layout_constraintLeft_toRightOf="@+id/txtLong_Ac"
                android:layout_marginLeft="31dp"
                card_view:layout_constraintTop_toTopOf="@+id/imageButton"
                android:layout_marginTop="19dp" />

            <TextView
                android:id="@+id/txtDate_Ac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date_ac"
                android:layout_marginBottom="8dp"
                card_view:layout_constraintBottom_toTopOf="@+id/txtStatus"
                android:layout_marginTop="8dp"
                card_view:layout_constraintTop_toBottomOf="@+id/imageButton"
                android:layout_marginLeft="16dp"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintVertical_bias="0.538"
                android:layout_marginStart="16dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:clickable="true"
                app:fabSize="auto"
                android:elevation="3dp"
                android:background="@color/colorPrimary"
                app:srcCompat="@drawable/ic_menu_send"
                android:layout_marginRight="17dp"
                card_view:layout_constraintRight_toRightOf="@+id/imageButton"
                card_view:layout_constraintTop_toTopOf="@+id/imageButton"
                android:layout_marginTop="149dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintHorizontal_bias="1.0" />

            <TextView
                android:id="@+id/txtAddess_Ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_yellow_A700"
                android:text="@string/adress_ac"
                android:layout_marginLeft="8dp"
                card_view:layout_constraintLeft_toLeftOf="@+id/imageButton"
                card_view:layout_constraintBottom_toBottomOf="@+id/imageButton"
                android:layout_marginBottom="14dp"
                card_view:layout_constraintRight_toLeftOf="@+id/floatingActionButton"
                android:layout_marginRight="8dp"
                card_view:layout_constraintHorizontal_bias="0.0" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>